--- a/Bruce-Hawtorn/BruceHawthorn/src/app/landing-page/about-home/about-home.component.html
+++ b/Bruce-Hawtorn/BruceHawthorn/src/app/landing-page/about-home/about-home.component.html
@@ -12,7 +12,7 @@
       <div class="text">
         <h1>
           I started out learning G-code for CNC machines. Knowing that I loved
-          making useful tools, my interest lead me to programing I recently
+          making useful tools, my interest lead me to programing. I recently
           completed a Full stack web development bootcamp through Per Scholas.
           My portfolio can be found above and my resume below.
         </h1>
