--- a/Bruce-Hawtorn/BruceHawthorn/src/app/nav-bar/nav-bar.component.html
+++ b/Bruce-Hawtorn/BruceHawthorn/src/app/nav-bar/nav-bar.component.html
@@ -6,16 +6,16 @@
     <div>
       <a class="button hover" href="about">About</a>
     </div>
-    <div>
+    <!-- <div>
       <a class="button hover" href="experience">Experience</a>
-    </div>
+    </div> -->
 
     <div>
       <a class="button hover" href="code">Portfolio</a>
     </div>
-    <div>
+    <!-- <div>
       <a class="button hover" href="hobbies">Hobbies</a>
-    </div>
+    </div> -->
     <div>
       <a class="button hover" href="references">References</a>
     </div>
