--- a/Bruce-Hawtorn/BruceHawthorn/src/app/code-prodjects/code-prodjects.component.html
+++ b/Bruce-Hawtorn/BruceHawthorn/src/app/code-prodjects/code-prodjects.component.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <H1><a href="https://goldeneagle1833.github.io/Shadow-Maze-V2.github.io/">Shadow Maze</a></H1>
+    <h1><a href="Pictures">Pictures</a></h1>
 </body>
 </html>
