--- a/Bruce-Hawtorn/BruceHawthorn/src/app/footer/footer.component.html
+++ b/Bruce-Hawtorn/BruceHawthorn/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
       <a class="button hover" href="https://github.com/goldeneagle1833">Git Hub</a>
     </div>
     <div>
-      <a class="button hover" href="https://www.linkedin.com/in/bruce-hawthorn-4707a4167/">Linkin</a>
+      <a class="button hover" href="https://www.linkedin.com/in/bruce-hawthorn-4707a4167/">Linkedin</a>
     </div>
 
 </nav>
