--- a/Bruce-Hawtorn/BruceHawthorn/src/app/pictures/pictures.component.html
+++ b/Bruce-Hawtorn/BruceHawthorn/src/app/pictures/pictures.component.html
@@ -1,1 +1,24 @@
-<p>pictures works!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- <H2>Content rendered with *ngFor</H2> -->
+    <div class="pictures">
+      <div class="picture" *ngFor="let picture of pictures">
+        <img
+          src="{{ picture.url }}"
+          alt="{{ picture.description }}"
+          width="90%"
+          class="pic"
+        />
+        <div class="text">
+          <h3>{{ picture.description }}</h3>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
